--- a/grewpy/Makefile
+++ b/grewpy/Makefile
@@ -36,12 +36,14 @@ stat_pos_features:
 	mkdir -p html/_tables/SUD_French-GSD
 	mkdir -p html/_tables/SUD_French-Rhapsodie
 	mkdir -p html/_tables/SUD_French-ParisStories
+	mkdir -p html/_tables/PS_2023
 	mkdir -p html/_tables/SUD_Naija-NSC
 	mkdir -p html/_tables/SUD_Zaar-Autogramm
 	python3 stat_pos_features.py SUD_Beja-NSC ${SUD}/SUD_Beja-NSC/*.conllu > html/_tables/SUD_Beja-NSC/stat_pos_features.json
 	python3 stat_pos_features.py SUD_French-GSD ${SUD}/SUD_French-GSD/*.conllu > html/_tables/SUD_French-GSD/stat_pos_features.json
 	python3 stat_pos_features.py SUD_French-Rhapsodie ${SUD}/SUD_French-Rhapsodie/*.conllu > html/_tables/SUD_French-Rhapsodie/stat_pos_features.json
 	python3 stat_pos_features.py SUD_French-ParisStories ${SUD}/SUD_French-ParisStories/*.conllu > html/_tables/SUD_French-ParisStories/stat_pos_features.json
+	python3 stat_pos_features.py PS_2023 ${SUD}/PS_2023/*.conllu > html/_tables/PS_2023/stat_pos_features.json
 	python3 stat_pos_features.py SUD_Naija-NSC ${SUD}/SUD_Naija-NSC/*.conllu > html/_tables/SUD_Naija-NSC/stat_pos_features.json
 	python3 stat_pos_features.py SUD_Zaar-Autogramm ${SUD}/SUD_Zaar-Autogramm/CORPUS/*.conllu > html/_tables/SUD_Zaar-Autogramm/stat_pos_features.json
 
@@ -49,25 +51,31 @@ label_upos:
 	mkdir -p html/_tables/SUD_French-GSD
 	mkdir -p html/_tables/SUD_French-Rhapsodie
 	mkdir -p html/_tables/SUD_French-ParisStories
+	mkdir -p html/_tables/PS_2023
 	python3 double_clust.py label_upos SUD_French-GSD@latest ${SUD}/SUD_French-GSD/*.conllu > html/_tables/SUD_French-GSD/label_upos.json
 	python3 double_clust.py label_upos SUD_French-Rhapsodie@latest ${SUD}/SUD_French-Rhapsodie/*.conllu > html/_tables/SUD_French-Rhapsodie/label_upos.json
 	python3 double_clust.py label_upos SUD_French-ParisStories@latest ${SUD}/SUD_French-ParisStories/*.conllu > html/_tables/SUD_French-ParisStories/label_upos.json
+	python3 double_clust.py label_upos PS_2023@latest ${SUD}/PS_2023/*.conllu > html/_tables/PS_2023/label_upos.json
 
 amb_lemma:
 	mkdir -p html/_tables/SUD_French-GSD
 	mkdir -p html/_tables/SUD_French-Rhapsodie
 	mkdir -p html/_tables/SUD_French-ParisStories
+	mkdir -p html/_tables/PS_2023
 	python3 double_clust.py amb_lemma SUD_French-GSD@latest ${SUD}/SUD_French-GSD/*.conllu > html/_tables/SUD_French-GSD/amb_lemma.json
 	python3 double_clust.py amb_lemma SUD_French-Rhapsodie@latest ${SUD}/SUD_French-Rhapsodie/*.conllu > html/_tables/SUD_French-Rhapsodie/amb_lemma.json
 	python3 double_clust.py amb_lemma SUD_French-ParisStories@latest ${SUD}/SUD_French-ParisStories/*.conllu > html/_tables/SUD_French-ParisStories/amb_lemma.json
+	python3 double_clust.py amb_lemma PS_2023@latest ${SUD}/PS_2023/*.conllu > html/_tables/PS_2023/amb_lemma.json
 
 adj_lemma_pos:
 	mkdir -p html/_tables/SUD_French-GSD
 	mkdir -p html/_tables/SUD_French-Rhapsodie
 	mkdir -p html/_tables/SUD_French-ParisStories
+	mkdir -p html/_tables/PS_2023
 	python3 double_clust.py adj_lemma_pos SUD_French-GSD@latest ${SUD}/SUD_French-GSD/*.conllu > html/_tables/SUD_French-GSD/adj_lemma_pos.json
 	python3 double_clust.py adj_lemma_pos SUD_French-Rhapsodie@latest ${SUD}/SUD_French-Rhapsodie/*.conllu > html/_tables/SUD_French-Rhapsodie/adj_lemma_pos.json
 	python3 double_clust.py adj_lemma_pos SUD_French-ParisStories@latest ${SUD}/SUD_French-ParisStories/*.conllu > html/_tables/SUD_French-ParisStories/adj_lemma_pos.json
+	python3 double_clust.py adj_lemma_pos PS_2023@latest ${SUD}/PS_2023/*.conllu > html/_tables/PS_2023/adj_lemma_pos.json
 
 parseme:
 	mkdir -p html/_tables/parseme
