add: grew_dev valid line in makefile for sud_zh

--- a/validator/Makefile
+++ b/validator/Makefile
@@ -8,6 +8,7 @@ valid:
 	# remove old validations
 	rm -f ~/.local/www/grew/valid/*.json
 	grew_dev valid -pattern "modules/global.json modules/relations.json modules/obsolete.json modules/idioms.json modules/french_agreement.json" -i sud_fr.json -o ~/.local/www/grew/valid
+	grew_dev valid -pattern "modules/global.json modules/relations.json modules/obsolete.json modules/idioms.json modules/zh_char.json" -i sud_zh.json -o ~/.local/www/grew/valid
 	grew_dev valid -pattern "modules/global.json modules/relations.json modules/obsolete.json modules/idioms.json" -i sud_pcm.json -o ~/.local/www/grew/valid
 	cp html/index.html ~/.local/www/grew/valid
 
