--- a/validator/Makefile
+++ b/validator/Makefile
@@ -7,9 +7,9 @@ doc:
 valid:
 	# remove old validations
 	rm -f ~/.local/www/grew/valid/*.json
-	grew_dev valid -pattern "modules/global.json modules/relations.json modules/obsolete.json modules/idioms.json modules/french_agreement.json" -i sud_fr.json -o ~/.local/www/grew/valid
-	grew_dev valid -pattern "modules/global.json modules/relations.json modules/obsolete.json modules/idioms.json modules/zh_char.json" -i sud_zh.json -o ~/.local/www/grew/valid
-	grew_dev valid -pattern "modules/global.json modules/relations.json modules/obsolete.json modules/idioms.json" -i sud_pcm.json -o ~/.local/www/grew/valid
+	grew_dev valid -request "modules/global.json modules/relations.json modules/obsolete.json modules/idioms.json modules/french_agreement.json" -i sud_fr.json -o ~/.local/www/grew/valid
+	grew_dev valid -request "modules/global.json modules/relations.json modules/obsolete.json modules/idioms.json modules/zh_char.json" -i sud_zh.json -o ~/.local/www/grew/valid
+	grew_dev valid -request "modules/global.json modules/relations.json modules/obsolete.json modules/idioms.json" -i sud_pcm.json -o ~/.local/www/grew/valid
 	cp html/index.html ~/.local/www/grew/valid
 
 clean:
@@ -24,6 +24,7 @@ compile:
 
 url:
 	@echo "http://localhost:8888/validator/?corpus=SUD_French-GSD@latest"
+	@echo "http://localhost:8888/validator/?corpus=SUD_French-Sequoia@latest"
 	@echo "http://localhost:8888/validator/?corpus=SUD_French-Rhapsodie@latest"
 	@echo "http://localhost:8888/validator/?corpus=SUD_French-ParisStories@latest"
 	@echo "http://localhost:8888/validator/?corpus=SUD_Naija-NSC@latest"
