ud_deps for 2.12

--- a/tables/ud_deps/appos.json
+++ b/tables/ud_deps/appos.json
@@ -1,12 +1,12 @@
 {
-  "title": "## Usage of subtypes of relation `appos` \u2022\u2022\u2022 UD 2.11",
+  "title": "## Usage of subtypes of relation `appos` \u2022\u2022\u2022 UD 2.12",
   "grew_match": {
     "appos": {
       "code": [
         "pattern {M -[1=appos,!2]-> N}"
       ],
       "key": null,
-      "users": 210
+      "users": 211
     },
     "appos:trans": {
       "code": [
@@ -42,7 +42,7 @@
       "appos": [
         1911,
         1.01974386339381,
-        0.08253077089181603
+        0.08249514353550615
       ],
       "treebank": "UD_Akkadian-RIAO@2.11"
     },
@@ -56,9 +56,9 @@
     },
     {
       "appos": [
-        252,
-        0.101900525677315,
-        0.005192664331341438
+        253,
+        0.10230489284270117,
+        0.005213270142180095
       ],
       "treebank": "UD_Welsh-CCG@2.11"
     },
@@ -72,25 +72,25 @@
     },
     {
       "appos": [
-        991,
-        0.056386913229018495,
-        0.0032885021884633634
+        1665,
+        0.09473684210526316,
+        0.005525081880717962
       ],
       "treebank": "UD_Norwegian-Nynorsk@2.11"
     },
     {
       "appos": [
-        3507,
-        0.20697592067988668,
-        0.023414341033515824
+        5418,
+        0.20448369565217392,
+        0.02194855175207616
       ],
       "treebank": "UD_Old_East_Slavic-TOROT@2.11"
     },
     {
       "appos": [
-        384,
-        0.07324051115773413,
-        0.00407569759172973
+        383,
+        0.07304978065992752,
+        0.004065083795917934
       ],
       "treebank": "UD_English-LinES@2.11"
     },
@@ -104,25 +104,17 @@
     },
     {
       "appos": [
-        589,
-        0.19006131010003227,
-        0.00834892555423258
+        487,
+        0.15714746692481446,
+        0.006903297139455107
       ],
       "treebank": "UD_French-Sequoia@2.11"
     },
     {
       "appos": [
-        12,
-        0.006322444678609062,
-        0.00044594745252517746
-      ],
-      "treebank": "UD_Hindi_English-HIENCS@2.11"
-    },
-    {
-      "appos": [
-        30,
-        0.6521739130434783,
-        0.009775171065493646
+        240,
+        0.6153846153846154,
+        0.0239736290080911
       ],
       "treebank": "UD_Old_East_Slavic-Ruthenian@2.11"
     },
@@ -208,9 +200,9 @@
     },
     {
       "appos": [
-        1603,
-        0.21836262089633565,
-        0.016316850226990493
+        1598,
+        0.21768151478000272,
+        0.01626612106961452
       ],
       "treebank": "UD_Dutch-LassySmall@2.11"
     },
@@ -250,15 +242,15 @@
       "appos": [
         535,
         0.07970798569725863,
-        0.004296257036626595
+        0.004296671083805164
       ],
       "treebank": "UD_Italian-PoSTWITA@2.11"
     },
     {
       "appos": [
-        150,
-        0.005560292100678356,
-        0.0003329522879371386
+        22,
+        0.0008155095080994921,
+        4.883300223078033e-05
       ],
       "treebank": "UD_Latin-ITTB@2.11"
     },
@@ -318,9 +310,9 @@
     },
     {
       "appos": [
-        30,
-        0.013198416190057193,
-        0.0010295833619328712
+        53,
+        0.02331720193576771,
+        0.0018159391489070101
       ],
       "treebank": "UD_Latin-Perseus@2.11"
     },
@@ -345,9 +337,9 @@
     },
     {
       "appos": [
-        695,
-        0.12867987409738937,
-        0.012559635680208183
+        614,
+        0.1136826513608591,
+        0.01109585080237097
       ],
       "treebank": "UD_Gothic-PROIEL@2.11"
     },
@@ -398,7 +390,7 @@
       "appos": [
         916,
         0.06465730218112516,
-        0.0030699108519337756
+        0.0030699725847426382
       ],
       "treebank": "UD_Italian-ISDT@2.11"
     },
@@ -412,17 +404,17 @@
     },
     {
       "appos": [
-        863,
-        0.04305527838754739,
-        0.002781887750990423
+        1597,
+        0.07967471562562363,
+        0.005147942918113216
       ],
       "treebank": "UD_Norwegian-Bokmaal@2.11"
     },
     {
       "appos": [
         78,
-        0.027827327863003924,
-        0.0018196663944943427
+        0.028097982708933718,
+        0.0018226428321065544
       ],
       "treebank": "UD_French-ParisStories@2.11"
     },
@@ -430,15 +422,23 @@
       "appos": [
         218,
         0.023593073593073593,
-        0.0015483064510401353
+        0.0015480975443480237
       ],
       "treebank": "UD_Naija-NSC@2.11"
     },
     {
       "appos": [
-        83,
-        0.04318418314255983,
-        0.0020524233432245302
+        15,
+        0.00646551724137931,
+        0.0007038288288288288
+      ],
+      "treebank": "UD_English-ESLSpok@2.11"
+    },
+    {
+      "appos": [
+        89,
+        0.04635416666666667,
+        0.002200247218788628
       ],
       "treebank": "UD_German-LIT@2.11"
     },
@@ -452,25 +452,25 @@
     },
     {
       "appos": [
-        576,
-        0.0339802961477199,
-        0.0020129162123626605
+        591,
+        0.03450691889998248,
+        0.0020394008095489507
       ],
       "treebank": "UD_Latvian-LVTB@2.11"
     },
     {
       "appos": [
-        1354,
-        0.2709625775465279,
-        0.01098214792645043
+        1353,
+        0.2707624574744847,
+        0.010974037034333407
       ],
       "treebank": "UD_Chinese-GSDSimp@2.11"
     },
     {
       "appos": [
-        35,
-        0.23333333333333334,
-        0.009200841219768665
+        40,
+        0.20725388601036268,
+        0.008362952122099102
       ],
       "treebank": "UD_Irish-Cadhan@2.11"
     },
@@ -503,17 +503,17 @@
     },
     {
       "appos": [
-        3,
-        0.0007513148009015778,
-        2.160807277598911e-05
+        6,
+        0.0015026296018031556,
+        4.321614555197822e-05
       ],
       "treebank": "UD_Galician-CTG@2.11"
     },
     {
       "appos": [
-        21,
-        0.02091633466135458,
-        0.0021267976503949767
+        20,
+        0.0199203187250996,
+        0.0020255215718047396
       ],
       "treebank": "UD_Chinese-HK@2.11"
     },
@@ -527,14 +527,14 @@
     },
     {
       "appos": [
-        108,
-        0.036,
-        0.0024667108238357353
+        190,
+        0.05717724947336744,
+        0.0032719695534622604
       ],
       "appos:nmod": [
-        86,
-        0.028666666666666667,
-        0.001964232693054382
+        173,
+        0.052061390309960875,
+        0.0029792143828893214
       ],
       "treebank": "UD_Vietnamese-VTB@2.11"
     },
@@ -567,17 +567,17 @@
     },
     {
       "appos": [
-        8774,
-        0.5479298070317866,
-        0.020329714888144862
+        8775,
+        0.547992256291763,
+        0.020332079039074663
       ],
       "treebank": "UD_Spanish-GSD@2.11"
     },
     {
       "appos": [
-        7673,
-        0.4600671543350522,
-        0.013874172305177545
+        7678,
+        0.46036695047367787,
+        0.01388321320984663
       ],
       "treebank": "UD_Catalan-AnCora@2.11"
     },
@@ -593,7 +593,7 @@
       "appos": [
         1929,
         0.11605101672482253,
-        0.007568861335635251
+        0.007568831637637771
       ],
       "treebank": "UD_English-EWT@2.11"
     },
@@ -602,17 +602,17 @@
     },
     {
       "appos": [
-        1494,
-        0.8711370262390671,
-        0.03071104076304808
+        1495,
+        0.8717201166180758,
+        0.030731597015232183
       ],
       "treebank": "UD_Old_East_Slavic-RNC@2.11"
     },
     {
       "appos": [
-        357,
-        0.06809078771695594,
-        0.003924802110817942
+        359,
+        0.06847224871256914,
+        0.003946789797713281
       ],
       "treebank": "UD_Swedish-LinES@2.11"
     },
@@ -634,9 +634,9 @@
     },
     {
       "appos": [
-        7723,
-        0.08784821357478416,
-        0.005117785946266893
+        7768,
+        0.08836611418885867,
+        0.005077097636090792
       ],
       "treebank": "UD_Czech-PDT@2.11"
     },
@@ -650,17 +650,17 @@
     },
     {
       "appos": [
-        2024,
-        0.20065430752453653,
-        0.0072381878781810115
+        2029,
+        0.2011499950431248,
+        0.0072426778989451894
       ],
       "treebank": "UD_Italian-VIT@2.11"
     },
     {
       "appos": [
         138,
-        0.06521739130434782,
-        0.006718270775522127
+        0.06518658478979689,
+        0.006716962764662935
       ],
       "treebank": "UD_Erzya-JR@2.11"
     },
@@ -738,9 +738,9 @@
     },
     {
       "appos": [
-        24,
-        0.192,
-        0.011611030478955007
+        103,
+        0.103,
+        0.007180702732849972
       ],
       "treebank": "UD_Javanese-CSUI@2.11"
     },
@@ -751,6 +751,14 @@
         0.003795066413662239
       ],
       "treebank": "UD_Kiche-IU@2.11"
+    },
+    {
+      "appos": [
+        227,
+        0.1701649175412294,
+        0.012754958700904647
+      ],
+      "treebank": "UD_English-GENTLE@2.11"
     },
     {
       "treebank": "UD_Japanese-GSDLUW@2.11"
@@ -807,14 +815,6 @@
       "treebank": "UD_Finnish-OOD@2.11"
     },
     {
-      "appos": [
-        12,
-        0.0006474237928243863,
-        2.09288940823552e-05
-      ],
-      "treebank": "UD_French-FTB@2.11"
-    },
-    {
       "treebank": "UD_Tamil-TTB@2.11"
     },
     {
@@ -851,11 +851,14 @@
     },
     {
       "appos": [
-        7,
-        0.03571428571428571,
-        0.0032618825722274
+        18,
+        0.020930232558139535,
+        0.0020920502092050207
       ],
       "treebank": "UD_Nheengatu-CompLin@2.11"
+    },
+    {
+      "treebank": "UD_Old_Irish-DipSGG@2.11"
     },
     {
       "appos": [
@@ -901,7 +904,7 @@
       "appos": [
         9325,
         0.21179222784982626,
-        0.00946649571139827
+        0.009466524541901427
       ],
       "treebank": "UD_Icelandic-IcePaHC@2.11"
     },
@@ -937,9 +940,9 @@
     },
     {
       "appos": [
-        1803,
-        0.09793058497637282,
-        0.009007658758112139
+        1523,
+        0.08149178661244583,
+        0.007408812741406653
       ],
       "treebank": "UD_Latin-PROIEL@2.11"
     },
@@ -952,6 +955,11 @@
       "treebank": "UD_Persian-PerDT@2.11"
     },
     {
+      "appos": [
+        1,
+        0.006756756756756757,
+        0.001081081081081081
+      ],
       "treebank": "UD_Apurina-UFPA@2.11"
     },
     {
@@ -966,13 +974,10 @@
       "treebank": "UD_Indonesian-PUD@2.11"
     },
     {
-      "treebank": "UD_Japanese-Modern@2.11"
-    },
-    {
       "appos": [
         67,
         0.06568627450980392,
-        0.002343804659623592
+        0.0023446248600223966
       ],
       "treebank": "UD_French-ParTUT@2.11"
     },
@@ -997,14 +1002,6 @@
     },
     {
       "treebank": "UD_Classical_Chinese-Kyoto@2.11"
-    },
-    {
-      "appos": [
-        288,
-        0.054857142857142854,
-        0.0051976177585273415
-      ],
-      "treebank": "UD_Norwegian-NynorskLIA@2.11"
     },
     {
       "appos": [
@@ -1146,18 +1143,21 @@
       "treebank": "UD_Romanian-ArT@2.11"
     },
     {
+      "treebank": "UD_Bororo-BDT@2.11"
+    },
+    {
       "appos": [
         7,
-        0.022653721682847898,
-        0.005287009063444109
+        0.0219435736677116,
+        0.005143277002204262
       ],
       "treebank": "UD_Akuntsu-TuDeT@2.11"
     },
     {
       "appos": [
-        2420,
-        0.27051196065280575,
-        0.009656630953093513
+        2412,
+        0.26961770623742454,
+        0.009624708206141138
       ],
       "treebank": "UD_Portuguese-PetroGold@2.11"
     },
@@ -1184,6 +1184,11 @@
       "treebank": "UD_Italian-Valico@2.11"
     },
     {
+      "appos": [
+        6,
+        0.027522935779816515,
+        0.0024968789013732834
+      ],
       "treebank": "UD_Malayalam-UFAL@2.11"
     },
     {
@@ -1201,23 +1206,23 @@
       "appos": [
         91,
         0.06390449438202248,
-        0.003073805100489782
+        0.003074116613742315
       ],
       "treebank": "UD_Italian-TWITTIRO@2.11"
     },
     {
       "appos": [
-        2357,
-        0.1379976580796253,
-        0.011014070159206352
+        2076,
+        0.12153143659992975,
+        0.009700707927384875
       ],
       "treebank": "UD_Ancient_Greek-PROIEL@2.11"
     },
     {
       "appos": [
         39,
-        0.04391891891891892,
-        0.0038778959928408075
+        0.04411764705882353,
+        0.003897661403158105
       ],
       "treebank": "UD_Breton-KEB@2.11"
     },
@@ -1275,16 +1280,16 @@
     {
       "appos": [
         7,
-        0.015283842794759825,
-        0.005090909090909091
+        0.00922266139657444,
+        0.0030809859154929575
       ],
       "treebank": "UD_Teko-TuDeT@2.11"
     },
     {
       "appos": [
-        1057,
-        0.11584831214379658,
-        0.006425922548483191
+        1185,
+        0.11011987733482019,
+        0.006319494440444764
       ],
       "treebank": "UD_English-GUM@2.11"
     },
@@ -1309,17 +1314,17 @@
     },
     {
       "appos": [
-        6924,
-        0.44413085311096856,
-        0.02364972179811663
+        6931,
+        0.44457985888389995,
+        0.02367395455119907
       ],
       "treebank": "UD_German-GSD@2.11"
     },
     {
       "appos": [
-        439,
-        0.06926475228778795,
-        0.007626426697705123
+        1899,
+        0.08392257380236874,
+        0.00955024818575459
       ],
       "treebank": "UD_Old_Church_Slavonic-PROIEL@2.11"
     },
@@ -1330,6 +1335,14 @@
         0.006140917905623788
       ],
       "treebank": "UD_Karelian-KKPP@2.11"
+    },
+    {
+      "appos": [
+        92,
+        0.07148407148407149,
+        0.004648107916940332
+      ],
+      "treebank": "UD_Maghrebi_Arabic_French-Arabizi@2.11"
     },
     {
       "appos": [
@@ -1381,14 +1394,6 @@
     },
     {
       "appos": [
-        203,
-        0.03961748633879782,
-        0.0020781933026893665
-      ],
-      "treebank": "UD_English-ESL@2.11"
-    },
-    {
-      "appos": [
         111,
         0.111,
         0.004658189600906458
@@ -1437,15 +1442,15 @@
       "appos": [
         146,
         0.146,
-        0.008648264423646487
+        0.008648776731236301
       ],
       "treebank": "UD_Turkish-PUD@2.11"
     },
     {
       "appos": [
-        446,
-        0.09083503054989817,
-        0.0038451590654366755
+        454,
+        0.09246435845213849,
+        0.0039141305284938355
       ],
       "treebank": "UD_Irish-IDT@2.11"
     },
@@ -1493,10 +1498,13 @@
       "treebank": "UD_Manx-Cadhan@2.11"
     },
     {
+      "treebank": "UD_Kyrgyz-KTMU@2.11"
+    },
+    {
       "appos": [
         8,
-        0.03333333333333333,
-        0.0027884280237016382
+        0.03278688524590164,
+        0.0027624309392265192
       ],
       "treebank": "UD_Skolt_Sami-Giellagas@2.11"
     },
@@ -1550,17 +1558,17 @@
     },
     {
       "appos": [
-        78,
-        0.06933333333333333,
-        0.002125977813513587
+        76,
+        0.06779661016949153,
+        0.0021095289643878203
       ],
       "treebank": "UD_Czech-CLTT@2.11"
     },
     {
       "appos": [
-        6277,
-        0.38410231305837716,
-        0.015681640463978696
+        6225,
+        0.3809203279892302,
+        0.015551264211607114
       ],
       "treebank": "UD_French-GSD@2.11"
     },
@@ -1576,23 +1584,23 @@
       "appos": [
         265,
         0.265,
-        0.012423233791195911
+        0.012422651415713483
       ],
       "treebank": "UD_German-PUD@2.11"
     },
     {
       "appos": [
-        76,
-        0.08775981524249422,
-        0.004924512408475345
+        197,
+        0.0758859784283513,
+        0.00412220129734254
       ],
       "treebank": "UD_Irish-TwittIrish@2.11"
     },
     {
       "appos": [
-        2344,
-        0.17231493053003014,
-        0.011228903888439116
+        2341,
+        0.1720943909431743,
+        0.01121447870159235
       ],
       "treebank": "UD_Dutch-Alpino@2.11"
     },
@@ -1606,9 +1614,9 @@
     },
     {
       "appos": [
-        1358,
-        0.27176305783470084,
-        0.011014591494918525
+        1357,
+        0.2715629377626576,
+        0.011006480602801502
       ],
       "treebank": "UD_Chinese-GSD@2.11"
     },
@@ -1641,9 +1649,9 @@
     },
     {
       "appos": [
-        6045,
-        0.23958622329673815,
-        0.01979312986847146
+        6043,
+        0.23950695572906344,
+        0.019786062989290053
       ],
       "treebank": "UD_Belarusian-HSE@2.11"
     },
@@ -1658,8 +1666,8 @@
     {
       "appos": [
         1,
-        0.0034602076124567475,
-        0.0007127583749109052
+        0.0033444816053511705,
+        0.0006849315068493151
       ],
       "treebank": "UD_Yakut-YKTDT@2.11"
     },
@@ -1709,8 +1717,8 @@
     {
       "appos": [
         24,
-        0.06504065040650407,
-        0.006995045176333431
+        0.053811659192825115,
+        0.0058809115412889
       ],
       "treebank": "UD_Moksha-JR@2.11"
     },
@@ -1731,20 +1739,15 @@
       "treebank": "UD_Czech-PUD@2.11"
     },
     {
+      "treebank": "UD_Old_Irish-DipWBG@2.11"
+    },
+    {
       "appos": [
         311,
         0.06559797511073613,
         0.003457168901042709
       ],
       "treebank": "UD_Scottish_Gaelic-ARCOSG@2.11"
-    },
-    {
-      "appos": [
-        6062,
-        0.5043680838672102,
-        0.019008140074502376
-      ],
-      "treebank": "UD_Portuguese-GSD@2.11"
     },
     {
       "appos": [
@@ -1783,11 +1786,19 @@
     },
     {
       "appos": [
-        1249,
-        0.20093307593307594,
-        0.007738010420603305
+        1236,
+        0.20120462314829887,
+        0.00771559661662349
       ],
       "treebank": "UD_Hebrew-HTB@2.11"
+    },
+    {
+      "appos": [
+        25,
+        0.01383508577753182,
+        0.0009806613580198487
+      ],
+      "treebank": "UD_Greek-GUD@2.11"
     },
     {
       "appos": [
