--- a/tables/sud_deps/appos.json
+++ b/tables/sud_deps/appos.json
@@ -1,5 +1,5 @@
 {
-  "title": "## Usage of subtypes of relation `appos` \u2022\u2022\u2022 SUD 2.11",
+  "title": "## Usage of subtypes of relation `appos` \u2022\u2022\u2022 SUD 2.12",
   "grew_match": {
     "appos": {
       "code": [
@@ -18,17 +18,17 @@
   "cells": [
     {
       "appos": [
-        8774,
-        0.5479298070317866,
-        0.020329714888144862
+        8775,
+        0.547992256291763,
+        0.020332079039074663
       ],
       "treebank": "SUD_Spanish-GSD@2.11"
     },
     {
       "appos": [
-        3507,
-        0.20697592067988668,
-        0.023414341033515824
+        5418,
+        0.20448369565217392,
+        0.02194855175207616
       ],
       "treebank": "SUD_Old_East_Slavic-TOROT@2.11"
     },
@@ -60,11 +60,6 @@
       "treebank": "SUD_Amharic-ATT@2.11"
     },
     {
-      "appos": [
-        589,
-        0.19006131010003227,
-        0.00834892555423258
-      ],
       "treebank": "SUD_French-Sequoia@2.11"
     },
     {
@@ -82,6 +77,9 @@
         0.01524234040372989
       ],
       "treebank": "SUD_Ancient_Hebrew-PTNK@2.11"
+    },
+    {
+      "treebank": "SUD_Bororo-BDT@2.11"
     },
     {
       "appos": [
@@ -117,9 +115,9 @@
     },
     {
       "appos": [
-        2024,
-        0.20065430752453653,
-        0.0072381878781810115
+        2029,
+        0.2011499950431248,
+        0.0072426778989451894
       ],
       "treebank": "SUD_Italian-VIT@2.11"
     },
@@ -139,17 +137,25 @@
     },
     {
       "appos": [
-        446,
-        0.09083503054989817,
-        0.0038451590654366755
+        454,
+        0.09246435845213849,
+        0.0039141305284938355
       ],
       "treebank": "SUD_Irish-IDT@2.11"
     },
     {
       "appos": [
-        30,
-        0.013198416190057193,
-        0.0010295833619328712
+        92,
+        0.07148407148407149,
+        0.004648107916940332
+      ],
+      "treebank": "SUD_Maghrebi_Arabic_French-Arabizi@2.11"
+    },
+    {
+      "appos": [
+        53,
+        0.02331720193576771,
+        0.0018159391489070101
       ],
       "treebank": "SUD_Latin-Perseus@2.11"
     },
@@ -187,9 +193,9 @@
     },
     {
       "appos": [
-        695,
-        0.12867987409738937,
-        0.012559635680208183
+        614,
+        0.1136826513608591,
+        0.01109585080237097
       ],
       "treebank": "SUD_Gothic-PROIEL@2.11"
     },
@@ -206,9 +212,9 @@
     },
     {
       "appos": [
-        6924,
-        0.44413085311096856,
-        0.02364972179811663
+        6931,
+        0.44457985888389995,
+        0.02367395455119907
       ],
       "treebank": "SUD_German-GSD@2.11"
     },
@@ -234,8 +240,8 @@
     {
       "appos": [
         7,
-        0.015283842794759825,
-        0.005090909090909091
+        0.00922266139657444,
+        0.0030809859154929575
       ],
       "treebank": "SUD_Teko-TuDeT@2.11"
     },
@@ -295,9 +301,17 @@
     },
     {
       "appos": [
+        25,
+        0.01383508577753182,
+        0.0009806613580198487
+      ],
+      "treebank": "SUD_Greek-GUD@2.11"
+    },
+    {
+      "appos": [
         24,
-        0.06504065040650407,
-        0.006995045176333431
+        0.053811659192825115,
+        0.0058809115412889
       ],
       "treebank": "SUD_Moksha-JR@2.11"
     },
@@ -316,7 +330,7 @@
       "appos": [
         1911,
         1.01974386339381,
-        0.08253077089181603
+        0.08249514353550615
       ],
       "treebank": "SUD_Akkadian-RIAO@2.11"
     },
@@ -330,6 +344,14 @@
     },
     {
       "appos": [
+        15,
+        0.00646551724137931,
+        0.0007038288288288288
+      ],
+      "treebank": "SUD_English-ESLSpok@2.11"
+    },
+    {
+      "appos": [
         408,
         0.18862690707350901,
         0.007304235740628021
@@ -338,9 +360,9 @@
     },
     {
       "appos": [
-        1494,
-        0.8711370262390671,
-        0.03071104076304808
+        1495,
+        0.8717201166180758,
+        0.030731597015232183
       ],
       "treebank": "SUD_Old_East_Slavic-RNC@2.11"
     },
@@ -373,9 +395,9 @@
     },
     {
       "appos": [
-        384,
-        0.07324051115773413,
-        0.00407569759172973
+        383,
+        0.07304978065992752,
+        0.004065083795917934
       ],
       "treebank": "SUD_English-LinES@2.11"
     },
@@ -389,9 +411,9 @@
     },
     {
       "appos": [
-        1354,
-        0.2709625775465279,
-        0.01098214792645043
+        1353,
+        0.2707624574744847,
+        0.010974037034333407
       ],
       "treebank": "SUD_Chinese-GSDSimp@2.11"
     },
@@ -407,20 +429,12 @@
       "appos": [
         535,
         0.07970798569725863,
-        0.004296257036626595
+        0.004296671083805164
       ],
       "treebank": "SUD_Italian-PoSTWITA@2.11"
     },
     {
       "treebank": "SUD_Old_Turkish-Tonqq@2.11"
-    },
-    {
-      "appos": [
-        12,
-        0.006322444678609062,
-        0.00044594745252517746
-      ],
-      "treebank": "SUD_Hindi_English-HIENCS@2.11"
     },
     {
       "appos": [
@@ -439,8 +453,8 @@
     {
       "appos": [
         39,
-        0.04391891891891892,
-        0.0038778959928408075
+        0.04411764705882353,
+        0.003897661403158105
       ],
       "treebank": "SUD_Breton-KEB@2.11"
     },
@@ -454,9 +468,9 @@
     },
     {
       "appos": [
-        1603,
-        0.21836262089633565,
-        0.01633930300590172
+        1598,
+        0.21768151478000272,
+        0.01628833824293883
       ],
       "treebank": "SUD_Dutch-LassySmall@2.11"
     },
@@ -470,9 +484,9 @@
     },
     {
       "appos": [
-        7673,
-        0.4600671543350522,
-        0.01403601840249513
+        7678,
+        0.46036695047367787,
+        0.014045164771843817
       ],
       "treebank": "SUD_Catalan-AnCora@2.11"
     },
@@ -485,11 +499,6 @@
       "treebank": "SUD_English-Pronouns@2.11"
     },
     {
-      "appos": [
-        6277,
-        0.38410231305837716,
-        0.015681640463978696
-      ],
       "treebank": "SUD_French-GSD@2.11"
     },
     {
@@ -502,9 +511,9 @@
     },
     {
       "appos": [
-        194,
-        0.06466666666666666,
-        0.004430943516890117
+        363,
+        0.10923863978332832,
+        0.006251183936351582
       ],
       "treebank": "SUD_Vietnamese-VTB@2.11"
     },
@@ -520,7 +529,7 @@
       "appos": [
         265,
         0.265,
-        0.012423233791195911
+        0.012422651415713483
       ],
       "treebank": "SUD_German-PUD@2.11"
     },
@@ -591,6 +600,17 @@
       "treebank": "SUD_Nayini-AHA@2.11"
     },
     {
+      "treebank": "SUD_Old_Irish-DipSGG@2.11"
+    },
+    {
+      "appos": [
+        54,
+        0.00140625,
+        0.00011347875425545329
+      ],
+      "treebank": "SUD_Portuguese-CINTIL@2.11"
+    },
+    {
       "appos": [
         30,
         0.03978779840848806,
@@ -619,9 +639,9 @@
     },
     {
       "appos": [
-        78,
-        0.06933333333333333,
-        0.002125977813513587
+        76,
+        0.06779661016949153,
+        0.002110349040624219
       ],
       "treebank": "SUD_Czech-CLTT@2.11"
     },
@@ -649,9 +669,17 @@
     },
     {
       "appos": [
-        1249,
-        0.20093307593307594,
-        0.007738010420603305
+        227,
+        0.1701649175412294,
+        0.012754958700904647
+      ],
+      "treebank": "SUD_English-GENTLE@2.11"
+    },
+    {
+      "appos": [
+        1236,
+        0.20120462314829887,
+        0.00771559661662349
       ],
       "treebank": "SUD_Hebrew-HTB@2.11"
     },
@@ -689,9 +717,9 @@
     },
     {
       "appos": [
-        24,
-        0.192,
-        0.011611030478955007
+        103,
+        0.103,
+        0.007180702732849972
       ],
       "treebank": "SUD_Javanese-CSUI@2.11"
     },
@@ -729,9 +757,9 @@
     },
     {
       "appos": [
-        2344,
-        0.17231493053003014,
-        0.011236116637026455
+        2341,
+        0.1720943909431743,
+        0.01122168214980778
       ],
       "treebank": "SUD_Dutch-Alpino@2.11"
     },
@@ -812,9 +840,9 @@
     },
     {
       "appos": [
-        357,
-        0.06809078771695594,
-        0.003924802110817942
+        359,
+        0.06847224871256914,
+        0.003946789797713281
       ],
       "treebank": "SUD_Swedish-LinES@2.11"
     },
@@ -852,9 +880,9 @@
     },
     {
       "appos": [
-        576,
-        0.0339802961477199,
-        0.0020180432688096696
+        591,
+        0.03450691889998248,
+        0.0020445440770492144
       ],
       "treebank": "SUD_Latvian-LVTB@2.11"
     },
@@ -862,15 +890,15 @@
       "appos": [
         91,
         0.06390449438202248,
-        0.003073805100489782
+        0.003074116613742315
       ],
       "treebank": "SUD_Italian-TWITTIRO@2.11"
     },
     {
       "appos": [
-        35,
-        0.23333333333333334,
-        0.009200841219768665
+        40,
+        0.20725388601036268,
+        0.008362952122099102
       ],
       "treebank": "SUD_Irish-Cadhan@2.11"
     },
@@ -893,8 +921,8 @@
     {
       "appos": [
         138,
-        0.06521739130434782,
-        0.006718270775522127
+        0.06518658478979689,
+        0.006716962764662935
       ],
       "treebank": "SUD_Erzya-JR@2.11"
     },
@@ -916,9 +944,9 @@
     },
     {
       "appos": [
-        3,
-        0.0007513148009015778,
-        2.160807277598911e-05
+        6,
+        0.0015026296018031556,
+        4.321614555197822e-05
       ],
       "treebank": "SUD_Galician-CTG@2.11"
     },
@@ -943,9 +971,9 @@
     },
     {
       "appos": [
-        7723,
-        0.08784821357478416,
-        0.005126509890918118
+        7768,
+        0.08836611418885867,
+        0.005156370520535869
       ],
       "treebank": "SUD_Czech-PDT@2.11"
     },
@@ -953,7 +981,7 @@
       "appos": [
         146,
         0.146,
-        0.008648264423646487
+        0.008648776731236301
       ],
       "treebank": "SUD_Turkish-PUD@2.11"
     },
@@ -1001,7 +1029,7 @@
       "appos": [
         916,
         0.06465730218112516,
-        0.003070291577144428
+        0.0030703533252663933
       ],
       "treebank": "SUD_Italian-ISDT@2.11"
     },
@@ -1030,6 +1058,9 @@
       "treebank": "SUD_Manx-Cadhan@2.11"
     },
     {
+      "treebank": "SUD_Kyrgyz-KTMU@2.11"
+    },
+    {
       "appos": [
         106,
         0.106,
@@ -1039,9 +1070,9 @@
     },
     {
       "appos": [
-        150,
-        0.005560292100678356,
-        0.0003329522879371386
+        22,
+        0.0008155095080994921,
+        4.883300223078033e-05
       ],
       "treebank": "SUD_Latin-ITTB@2.11"
     },
@@ -1057,23 +1088,23 @@
       "appos": [
         9325,
         0.21179222784982626,
-        0.00946649571139827
+        0.009466524541901427
       ],
       "treebank": "SUD_Icelandic-IcePaHC@2.11"
     },
     {
       "appos": [
-        2357,
-        0.1379976580796253,
-        0.011014070159206352
+        2076,
+        0.12153143659992975,
+        0.009700707927384875
       ],
       "treebank": "SUD_Ancient_Greek-PROIEL@2.11"
     },
     {
       "appos": [
-        1358,
-        0.27176305783470084,
-        0.011014591494918525
+        1357,
+        0.2715629377626576,
+        0.011006480602801502
       ],
       "treebank": "SUD_Chinese-GSD@2.11"
     },
@@ -1098,9 +1129,9 @@
     },
     {
       "appos": [
-        7,
-        0.03571428571428571,
-        0.0032618825722274
+        18,
+        0.020930232558139535,
+        0.0020920502092050207
       ],
       "treebank": "SUD_Nheengatu-CompLin@2.11"
     },
@@ -1146,9 +1177,9 @@
     },
     {
       "appos": [
-        439,
-        0.06926475228778795,
-        0.007626426697705123
+        1899,
+        0.08392257380236874,
+        0.00955024818575459
       ],
       "treebank": "SUD_Old_Church_Slavonic-PROIEL@2.11"
     },
@@ -1220,8 +1251,8 @@
     {
       "appos": [
         1,
-        0.0034602076124567475,
-        0.0007127583749109052
+        0.0033444816053511705,
+        0.0006849315068493151
       ],
       "treebank": "SUD_Yakut-YKTDT@2.11"
     },
@@ -1243,9 +1274,9 @@
     },
     {
       "appos": [
-        83,
-        0.04318418314255983,
-        0.0020524233432245302
+        89,
+        0.04635416666666667,
+        0.002200247218788628
       ],
       "treebank": "SUD_German-LIT@2.11"
     },
@@ -1266,13 +1297,18 @@
       "treebank": "SUD_Japanese-BCCWJ@2.11"
     },
     {
+      "appos": [
+        6,
+        0.027522935779816515,
+        0.0024968789013732834
+      ],
       "treebank": "SUD_Malayalam-UFAL@2.11"
     },
     {
       "appos": [
         7,
-        0.022653721682847898,
-        0.005287009063444109
+        0.0219435736677116,
+        0.005143277002204262
       ],
       "treebank": "SUD_Akuntsu-TuDeT@2.11"
     },
@@ -1281,9 +1317,9 @@
     },
     {
       "appos": [
-        2420,
-        0.27051196065280575,
-        0.009656630953093513
+        2412,
+        0.26961770623742454,
+        0.009624708206141138
       ],
       "treebank": "SUD_Portuguese-PetroGold@2.11"
     },
@@ -1323,7 +1359,7 @@
       "appos": [
         67,
         0.06568627450980392,
-        0.002343804659623592
+        0.0023446248600223966
       ],
       "treebank": "SUD_French-ParTUT@2.11"
     },
@@ -1334,14 +1370,6 @@
         0.007960107753402262
       ],
       "treebank": "SUD_Russian-SynTagRus@2.11"
-    },
-    {
-      "appos": [
-        288,
-        0.054857142857142854,
-        0.0051976177585273415
-      ],
-      "treebank": "SUD_Norwegian-NynorskLIA@2.11"
     },
     {
       "treebank": "SUD_Pomak-Philotis@2.11"
@@ -1426,9 +1454,9 @@
     },
     {
       "appos": [
-        1803,
-        0.09793058497637282,
-        0.009007658758112139
+        1523,
+        0.08149178661244583,
+        0.007408812741406653
       ],
       "treebank": "SUD_Latin-PROIEL@2.11"
     },
@@ -1465,6 +1493,11 @@
       "treebank": "SUD_Komi_Zyrian-IKDP@2.11"
     },
     {
+      "appos": [
+        1,
+        0.006756756756756757,
+        0.001081081081081081
+      ],
       "treebank": "SUD_Apurina-UFPA@2.11"
     },
     {
@@ -1506,6 +1539,9 @@
         0.005207713639816586
       ],
       "treebank": "SUD_Romanian-RRT@2.11"
+    },
+    {
+      "treebank": "SUD_Old_Irish-DipWBG@2.11"
     },
     {
       "appos": [
@@ -1552,25 +1588,25 @@
     },
     {
       "appos": [
-        863,
-        0.04305527838754739,
-        0.002781887750990423
+        1597,
+        0.07967471562562363,
+        0.005147942918113216
       ],
       "treebank": "SUD_Norwegian-Bokmaal@2.11"
     },
     {
       "appos": [
-        21,
-        0.02091633466135458,
-        0.0021267976503949767
+        20,
+        0.0199203187250996,
+        0.0020255215718047396
       ],
       "treebank": "SUD_Chinese-HK@2.11"
     },
     {
       "appos": [
-        252,
-        0.101900525677315,
-        0.005192664331341438
+        253,
+        0.10230489284270117,
+        0.005213270142180095
       ],
       "treebank": "SUD_Welsh-CCG@2.11"
     },
@@ -1608,9 +1644,9 @@
     },
     {
       "appos": [
-        6045,
-        0.23958622329673815,
-        0.019813111068138094
+        6043,
+        0.23950695572906344,
+        0.01980603653120688
       ],
       "treebank": "SUD_Belarusian-HSE@2.11"
     },
@@ -1643,9 +1679,9 @@
     },
     {
       "appos": [
-        991,
-        0.056386913229018495,
-        0.0032885021884633634
+        1665,
+        0.09473684210526316,
+        0.005525081880717962
       ],
       "treebank": "SUD_Norwegian-Nynorsk@2.11"
     },
@@ -1657,9 +1693,9 @@
     },
     {
       "appos": [
-        30,
-        0.6521739130434783,
-        0.009775171065493646
+        240,
+        0.6153846153846154,
+        0.0239736290080911
       ],
       "treebank": "SUD_Old_East_Slavic-Ruthenian@2.11"
     },
@@ -1681,19 +1717,11 @@
     },
     {
       "appos": [
-        76,
-        0.08775981524249422,
-        0.004924512408475345
+        197,
+        0.0758859784283513,
+        0.00412220129734254
       ],
       "treebank": "SUD_Irish-TwittIrish@2.11"
-    },
-    {
-      "appos": [
-        12,
-        0.0006474237928243863,
-        2.09288940823552e-05
-      ],
-      "treebank": "SUD_French-FTB@2.11"
     },
     {
       "appos": [
@@ -1705,17 +1733,9 @@
     },
     {
       "appos": [
-        6062,
-        0.5043680838672102,
-        0.019008140074502376
-      ],
-      "treebank": "SUD_Portuguese-GSD@2.11"
-    },
-    {
-      "appos": [
-        1057,
-        0.11584831214379658,
-        0.006429596827173411
+        1185,
+        0.11011987733482019,
+        0.0063228326290178
       ],
       "treebank": "SUD_English-GUM@2.11"
     },
@@ -1726,14 +1746,6 @@
         0.013483915427056495
       ],
       "treebank": "SUD_Portuguese-Bosque@2.11"
-    },
-    {
-      "appos": [
-        203,
-        0.03961748633879782,
-        0.0020781933026893665
-      ],
-      "treebank": "SUD_English-ESL@2.11"
     },
     {
       "appos": [
@@ -1754,8 +1766,8 @@
     {
       "appos": [
         8,
-        0.03333333333333333,
-        0.0027884280237016382
+        0.03278688524590164,
+        0.0027624309392265192
       ],
       "treebank": "SUD_Skolt_Sami-Giellagas@2.11"
     }
